<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HayStack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="new_room_btn_text">New Room</string>
    <string name="existing_room_btn_text">Existing Room</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_delete_me">DeleteMe</string>
    <string name="logout">LOGOUT</string>
    <string name="user_name">USER NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="create_account">CREATE ACCOUNT</string>


    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="pin">Pin</string>
    <string name="recents">Recents</string>
    <string name="error">Error</string>
    <string name="new_queue">NEW QUEUE</string>

    <string name="create_queue">CREATE QUEUE</string>
    <string name="join_queue">JOIN QUEUE</string>
    <string name="new_queue_name">New Queue Name</string>
    <string name="existing_queue_id">Existing Queue ID</string>
</resources>
