<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/playlist_name"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

        <Button
            android:id="@+id/new_room_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:padding="10dp"
            android:text="@string/new_room_btn_text"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/existing_playlist_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/pin" />

        <Button
            android:id="@+id/existing_room_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:padding="10dp"
            android:text="@string/existing_room_btn_text"
            android:textColor="@android:color/black" />

        <include layout="@layout/loading_spinner" />

    </LinearLayout>
</ScrollView>