<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/create_account_user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:text="somename"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_account_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="saif@saif."
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/create_account_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="password"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <EditText
            android:id="@+id/create_account_password_confirm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:text="password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/send_create_account_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#014143"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <!--<include layout="@layout/loading_spinner" />-->

</RelativeLayout>