<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <com.haystack.saifkhan.haystack.uI.ResizedVideoView
        android:id="@+id/background_video_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true" />

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/login_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="saif@saif." />

                <EditText
                    android:id="@+id/login_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="password" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edges"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/login_button"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    android:typeface="normal" />

            </LinearLayout>

            <Button
                android:id="@+id/register_switch_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edges_clear"
                android:layout_alignParentBottom="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="25dp"
                android:text="@string/signup_button"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:typeface="normal" />
        </RelativeLayout>
    </ViewFlipper>

    <include layout="@layout/loading_spinner" />

</RelativeLayout>
