<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enter_queue_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_dark_background"
    android:orientation="vertical"
    android:padding="50dp"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/new_queue_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:text="@string/new_queue"
            android:textColor="@color/musicq_red"
            android:textStyle="bold" />

        <Button
            android:id="@+id/join_queue_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:text="@string/join_queue"
            android:textColor="@color/text_light_gray"
            android:textStyle="bold" />
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/new_used_view_flipper"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--FIRST CHILD-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.haystack.saifkhan.haystack.uI.MaxLengthTextView
                android:id="@+id/new_queue_text_view"
                style="@style/FancyText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@drawable/textview_rounded_all_corners"
                android:hint="@string/new_queue_name" />

            <Button
                android:id="@+id/new_queue_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edges"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/create_queue"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="normal" />

        </LinearLayout>

        <!--SECOND CHILD-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.haystack.saifkhan.haystack.uI.MaxLengthTextView
                android:id="@+id/join_queue_text_view"
                style="@style/FancyText"
                android:maxLines="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_rounded_all_corners"
                android:inputType="number"
                android:hint="@string/existing_queue_id" />

            <Button
                android:id="@+id/join_queue_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edges"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/join_queue"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="normal" />

        </LinearLayout>
    </ViewFlipper>
</LinearLayout>